[project]
name = "hl-agent-sdk"
version = "0.2.0"
description = "Hyperliquid perpetuals trading SDK for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["hyperliquid", "trading", "perpetuals", "defi", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "hyperliquid-python-sdk>=0.9.0",
    "eth-account>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Repository = "https://github.com/nansen-ai/hyperliquid-agent-sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hl_agent_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
